@@ -1,1 +1,1 @@
-    <div id="folder"><a href="$FILEURL/"><img border="0" src="/icons/agfolder.png"><br>$FILE</a></div>
+    <div class="folder"><a href="$FILEURL/"><img border="0" src="/icons/agfolder.png"><br>$FILE</a></div>
