@@ -1,0 +1,1 @@
+<a href="$URL?width=$WIDTH">next &raquo;</a>
