@@ -1,1 +1,0 @@
-<a href="$URL?width=$WIDTH" class="nav"><img src="$PICTURE"><br>$DIRECTION - $FILENAME</a>
