@@ -1,12 +1,8 @@
-<td width="60%">
-          <center>
-            <table align="center" class="info">
               <tr>
-                <td>
-									$COMMENT
-									$INFO
-                </td>
+                 <td colspan="3">
+                   <div id="comment">
+                      $NAMEVALUEINFO
+                      $COMMENT
+                   </div>
+                 </td>
               </tr>
-            </table>
-          </center>
-</td>
